<resources>
    <string name="app_name">PlanetZoom</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="next">N E X T</string>
    <string name="verify">V E R I F Y</string>
    <string name="login_reg">Login or Register</string>
    <string name="mobile_email">Mobile Number / Email ID</string>
    <string name="proceeding">By Proceeding you agree to our</string>
    <string name="terms"><u>Terms and Conditions</u></string>
    <string name="sub"><u>Select Sub Category</u></string>
    <string name="upload"><u>Upload Logo</u></string>
    <string name="upload_event"><u>Upload Event Logo</u></string>
    <string name="upload_event_map"><u>Upload Event Map</u></string>
    <string name="upload_event_images"><u>Upload Event Images</u></string>
    <string name="uploaded_event_images"><u>Uploaded Event Images</u></string>
    <string name="business_info"><u>Business Info</u></string>
    <string name="social_info"><u>Social Info</u></string>
    <string name="otp">OTP has been sent to your</string>
    <string name="mobile">Mobile Number</string>
    <string name="email">Email ID</string>
    <string name="first_name">First Name</string>
    <string name="enter_otp">Enter OTP code</string>
    <string name="resend">Resend OTP</string>
    <string name="edit_mobile">Edit Mobile Number</string>
    <string name="welcome_to">Welcome To</string>
    <string name="planet_zoom">Planet Zoom</string>
    <string name="scan_to_connect">Scan to Connect</string>
    <string name="get_started">Get Started</string>
    <string name="upload_logo">Upload Logo</string>
    <string name="website">Website</string>
    <string name="adds_loc">Address / Location</string>
    <string name="about">About</string>
    <string name="address">Address</string>
    <string name="company">Company Name</string>
    <string name="designation">Designation</string>
    <string name="busi_phone">Business Phone</string>
    <string name="desc">Description</string>
    <string name="upload_gallery"><u>Upload your Gallery</u></string>
    <string name="socail_link"><u>Social Media Link</u></string>
    <string name="choose_file">Choose files</string>
    <string name="insta">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="youtube">Youtube</string>
    <string name="linkedin">Linkedin</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="event_name">Event Name</string>
    <string name="event_desc">Event Description</string>
    <string name="event_venue">Event Venue</string>
    <string name="event_contact">Event Contact Number</string>
    <string name="event_emergency">Event Emergency Number</string>
    <string name="event_loc">Event Location</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="price">Price</string>
    <string name="no_of_tickets">No of tickets</string>
    <string name="create">Create Event</string>
    <string name="event_org">Event Organisation</string>
    <string name="event_dates">Event Dates</string>
    <string name="sponsors">Sponsors</string>
    <string name="activities">Activities</string>
    <string name="title">Title</string>
    <string name="add_day">Add Day</string>
    <string name="added_days"><u> Added Days</u></string>
    <string name="add_mapping"><u> Add Mapping Places</u></string>
    <string name="added_places"><u> Added Places</u></string>
    <string name="search_volunteer"><u>Search Volunteers</u></string>
    <string name="added_volunteer"><u>Added Volunteers</u></string>
    <string name="added_members"><u>Added Members</u></string>
    <string name="name">Name</string>
    <string name="enter_places">Enter Places</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="loading">Loading...</string>
    <string name="biz_history">BIZ QR History</string>

    <string name="transition">transit</string>
    <string name="live_msg">This is a demo live message which is going to be shared in the event and other things</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>


    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>

    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="youAreNotUpdatedMessage">A new version of YOUR_APP_NAME is available. Please update to version\s</string>
    <string name="youAreNotUpdatedMessage1">\s now</string>
    <string name="update">Update</string>
    <string name="title_activity_biz_qr_history">BizQrHistoryActivity</string>
    <string name="tab_text_1">Scanned By Me</string>
    <string name="tab_text_2">Who Scanned Me</string>
    <string name="tab_ecard_1">Scanned</string>
    <string name="tab_ecard_2">Received</string>
    <string name="tab_ecard_3">Shared</string>

    <string name="scan_convert">Scan and convert physical to digital business</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
