<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="50dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="30dp">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        app:civ_border_width="2dp"
                        app:civ_border_color="@color/colorAccent"
                        android:src="@drawable/ic_account_circle"/>


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_edit"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginBottom="5dp"
                        android:layout_gravity="bottom|right"
                        android:src="@drawable/pencil"
                        app:civ_circle_background_color="@color/white" />
                </FrameLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <com.angadi.tripmanagementa.utils.CustomFontEditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:imeOptions="actionDone"
                        android:inputType="text" />

                    <com.angadi.tripmanagementa.utils.CustomFontEditText
                        android:id="@+id/edt_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/mobile"
                        android:imeOptions="actionDone"
                        android:inputType="text" />

                    <com.angadi.tripmanagementa.utils.CustomFontEditText
                        android:id="@+id/edt_about"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginTop="10dp"
                        android:gravity="top"
                        android:hint="@string/about"
                        android:imeOptions="actionDone"
                        android:inputType="text" />

                    <com.angadi.tripmanagementa.utils.CustomFontEditText
                        android:id="@+id/edt_address"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginTop="10dp"
                        android:gravity="top"
                        android:hint="@string/address"
                        android:imeOptions="actionDone"
                        android:inputType="text" />

                    <com.angadi.tripmanagementa.utils.CustomFontEditText
                        android:id="@+id/edt_company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/company"
                        android:imeOptions="actionDone"
                        android:inputType="text" />

                    <com.angadi.tripmanagementa.utils.CustomFontEditText
                        android:id="@+id/edt_designation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/designation"
                        android:imeOptions="actionDone"
                        android:inputType="text" />


                    <com.angadi.tripmanagementa.utils.CustomFontEditText
                        android:id="@+id/edt_website"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/website"
                        android:imeOptions="actionDone"
                        android:inputType="text" />

                    <com.angadi.tripmanagementa.utils.CustomFontEditText
                        android:id="@+id/edt_busi_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/busi_phone"
                        android:imeOptions="actionDone"
                        android:inputType="text" />
                </LinearLayout>

                <com.angadi.tripmanagementa.utils.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/upload_gallery"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                    <com.angadi.tripmanagementa.utils.CustomFontButton
                        android:id="@+id/btn_choose"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:foreground="?attr/selectableItemBackground"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/button_background"
                        android:text="@string/choose_file"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />


                </LinearLayout>

                <com.angadi.tripmanagementa.utils.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/socail_link"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/whatsapp" />

                        <com.angadi.tripmanagementa.utils.CustomFontEditText
                            android:id="@+id/edt_whatsapp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:hint="@string/whatsapp"
                            android:imeOptions="actionDone"
                            android:inputType="text" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/insta" />

                        <com.angadi.tripmanagementa.utils.CustomFontEditText
                            android:id="@+id/edt_insta"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:hint="@string/insta"
                            android:imeOptions="actionDone"
                            android:inputType="text" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/facebook" />

                        <com.angadi.tripmanagementa.utils.CustomFontEditText
                            android:id="@+id/edt_facebook"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:hint="@string/facebook"
                            android:imeOptions="actionDone"
                            android:inputType="text" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/linkedin" />

                        <com.angadi.tripmanagementa.utils.CustomFontEditText
                            android:id="@+id/edt_linkedin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:hint="@string/linkedin"
                            android:imeOptions="actionDone"
                            android:inputType="text" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/youtube" />

                        <com.angadi.tripmanagementa.utils.CustomFontEditText
                            android:id="@+id/edt_youtube"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:hint="@string/youtube"
                            android:imeOptions="actionDone"
                            android:inputType="text" />

                    </LinearLayout>


                    <com.angadi.tripmanagementa.utils.CustomFontButton
                        android:id="@+id/btn_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="40dp"
                        android:background="@drawable/black_background"
                        android:text="Update"
                        android:foreground="?attr/selectableItemBackground"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <com.angadi.tripmanagementa.utils.CustomFontButton
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:text="Logout"
                        android:textStyle="bold"
                        android:id="@+id/btn_logout"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/edittext_background"/>

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/loading_layout"
        layout="@layout/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible" />
    </FrameLayout>
</LinearLayout>