<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddMembersActivity">

    <include layout="@layout/toolbar_two" />

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:id="@+id/layout_normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="15dp"
                    android:visibility="gone">


                    <com.angadi.tripmanagementa.utils.CustomFontEditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords" />

                    <com.angadi.tripmanagementa.utils.CustomFontEditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress" />

                    <com.angadi.tripmanagementa.utils.CustomFontEditText
                        android:id="@+id/edt_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/mobile"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress" />

                    <com.angadi.tripmanagementa.utils.CustomFontEditText
                        android:id="@+id/edt_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/about"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress" />


                    <com.angadi.tripmanagementa.utils.CustomFontButton
                        android:id="@+id/btn_add"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/black_background"
                        android:text="Add"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_volunteer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.6"
                            android:orientation="horizontal">

                            <com.angadi.tripmanagementa.utils.CustomFontEditText
                                android:id="@+id/edt_emailMobile"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/mobile_email"
                                android:imeOptions="actionDone"
                                android:inputType="text" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/img_search"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_search_black" />

                        </LinearLayout>


                    </LinearLayout>

<!--                    <androidx.cardview.widget.CardView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_margin="5dp"-->
<!--                        app:cardBackgroundColor="@color/white"-->
<!--                        app:cardCornerRadius="3dp"-->
<!--                        app:cardUseCompatPadding="true">-->

                        <com.angadi.tripmanagementa.utils.CustomFontTextView
                            android:id="@+id/txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:padding="10dp"
                            android:layout_margin="10dp"
                            android:text="search result"
                            android:visibility="gone"
                            android:textColor="@color/black" />

<!--                    </androidx.cardview.widget.CardView>-->


                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <include
            android:id="@+id/loading_layout"
            layout="@layout/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible" />

    </FrameLayout>

</LinearLayout>